2001-06-04  John Harper  <jsh@pixelslut.com>

	* windows.c (focus_on_window): don't update focus_window after
	calling XSetInputFocus (), instead wait for the focus-in event
	to do this

	(pending_focus_window): new variable to make this work
	correctly

	(focus_off_window): new function, called when a window becomes
	unfocusable

	* events.c (unmap_notify): call focus_off_window
	(focus_in): nullify pending_focus_window if it actually gets
	focused

2001-05-22  John Harper  <jsh@pixelslut.com>

	Fixed bug 8220 (Having Ctrl as default "modifier key used for
	default WM shortcuts" breaks everything...):

	* keys.c (wm_mod): default window manager modifier is once more
	`M-' instead of `C-'

2001-05-04  John Harper  <jsh@eazel.com>

	* keys.h, keys.c: added support for Off2 and Off3 event types
	(button release events). Also changed it so that Click1 events
	now print as `Click'

2001-04-22  John Harper  <jsh@eazel.com>

	* colors.c (colors_init): use `#000000' instead of `black'.
	This will still work even if rgb.txt doesn't exist. Also check
	for Fget_color () throwing an exception

2001-04-11  John Harper  <jsh@eazel.com>

	Fixed bug 6970 (X plugin doesn't update width and height of
	drawable structure):

	* x.c (x_window_note_changes): new function, called by
	Fx_configure_window () after making changes

2001-03-29  John Harper  <jsh@eazel.com>

	Fixed an ICCCM compliance problem:

	* functions.c, events.c (configure_request, Fresize_window_to,
	Fmove_resize_window_to): don't send a synthetic configure
	notify event if the window was resized (in which case a real
	configure notify was generated)

2001-03-21  John Harper  <jsh@eazel.com>

	* fonts.c (x_create_font_set): reverted the last change to
	merge calls to setlocale (). (I had failed to realize that the
	result of calling setlocale describes the current locale not
	the original one). Also added some code to copy the returned
	locale name since it's in a static buffer
