@@ -1,3 +1,8 @@
+2001-06-12  John Harper  <jsh@pixelslut.com>
+
+	* display.c (sys_init): if XQueryShapeExtension fails, print a
+	message and terminate the wm
+
 2001-06-04  John Harper  <jsh@pixelslut.com>
 
 	* windows.c (focus_on_window): don't update focus_window after
